--- a/MVC_HW/MVC_HW.csproj
+++ b/MVC_HW/MVC_HW.csproj
@@ -166,6 +166,7 @@
     <Content Include="Views\SalesOrders\Index.cshtml" />
     <Content Include="scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\SalesOrders\searchResult.cshtml" />
+    <Content Include="Views\SalesOrders\Delete.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
