--- a/MVC_HW/Web.config
+++ b/MVC_HW/Web.config
@@ -51,4 +51,8 @@
         preCondition="managedHandler"/>
     </modules>
   </system.webServer>
+
+  <connectionStrings>
+    <add name="Default" connectionString="Data Source=信達-PC\SQLEXPRESS;Initial Catalog=TSQL2012;User ID=sa;Password=8869171892" >     </add>
+    </connectionStrings>
 </configuration>
