--- a/MVC_HW/MVC_HW.csproj
+++ b/MVC_HW/MVC_HW.csproj
@@ -148,6 +148,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\SalesOrdersController.cs" />
     <Compile Include="Dao\BaseDao.cs" />
+    <Compile Include="Dao\EmployeeDao.cs" />
     <Compile Include="Dao\OrderDao.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -156,6 +157,7 @@
     <Compile Include="Models\Employees.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\SearchArgs.cs" />
+    <Compile Include="Models\Service\EmployeeService.cs" />
     <Compile Include="Models\Service\OrderService.cs" />
     <Compile Include="Models\Shippers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
