add edit datetime

--- a/MVC_HW/MVC_HW.csproj
+++ b/MVC_HW/MVC_HW.csproj
@@ -148,8 +148,10 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\SalesOrdersController.cs" />
     <Compile Include="Dao\BaseDao.cs" />
+    <Compile Include="Dao\CustomerDao.cs" />
     <Compile Include="Dao\EmployeeDao.cs" />
     <Compile Include="Dao\OrderDao.cs" />
+    <Compile Include="Dao\ShipperDao.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -157,8 +159,10 @@
     <Compile Include="Models\Employees.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\SearchArgs.cs" />
+    <Compile Include="Models\Service\CustomerService.cs" />
     <Compile Include="Models\Service\EmployeeService.cs" />
     <Compile Include="Models\Service\OrderService.cs" />
+    <Compile Include="Models\Service\ShipperService.cs" />
     <Compile Include="Models\Shippers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
