--- a/MVC_HW/Web.config
+++ b/MVC_HW/Web.config
@@ -53,6 +53,6 @@
   </system.webServer>
 
   <connectionStrings>
-    <add name="Default" connectionString="Data Source=MA324-36\SQLEXPRESS;Initial Catalog=TSQL2012;User ID=xie;Password=8869171892" >     </add>
+    <add name="Default" connectionString="Data Source=信達-PC\SQLEXPRESS;Initial Catalog=TSQL2012;User ID=sa;Password=8869171892" >     </add>
     </connectionStrings>
 </configuration>
